deployment/kubernetes/ingress/ingress-controller-definition.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
    name: nginx-controller
    labels: 
        app: nginx-controller-app
spec: 
    replicas: 1
    selector: 
        matchLabels: 
            name: nginx-ingress ##ingress-order-routing-rules
    template: 
        metadata:
            labels:
                name: nginx-ingress
        spec: 
            containers: 
                - name: ingress-container-name 
                  image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
                  args: 
                    - /nginx-ingress-controller
                    - --configmap=${POD_NAMESPACE}/nginx-configuration
                  ports:
                   - name: http
                     containerPort: 8080
                   - name: https
                     containerPort: 443
