deployment/kubernetes/ingress/ingress-controller-serviceaccount-definition.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    creationTimestamp: "2022-03-01T12:51:08Z"
    name: default
    namespace: default
    resourceVersion: "414"
    uid: adee1343-18ef-4406-8384-dc18bf22b0a5
  secrets:
  - name: default-token-6bn46
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"ServiceAccount","metadata":{"annotations":{},"name":"ingress-serviceaccount","namespace":"default"}}
    creationTimestamp: "2022-03-01T13:28:18Z"
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:secrets:
          .: {}
          k:{"name":"ingress-serviceaccount-token-5n4x4"}:
            .: {}
            f:name: {}
      manager: kube-controller-manager
      operation: Update
      time: "2022-03-01T13:28:18Z"
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2022-03-01T13:28:18Z"
    name: ingress-serviceaccount
    namespace: default
    resourceVersion: "3460"
    uid: b9a6d94b-a6aa-40db-acd6-dfedc3a5f1cf
  secrets:
  - name: ingress-serviceaccount-token-5n4x4
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-controller
  namespace: ingress-
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      serviceAccountName: ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
            - --default-backend-service=app-space/default-http-backend
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
