deployment/kubernetes/ingress/ingress-controller-service-definition.yaml
apiVersion: v1
kind: Service
metadata: 
    name: ingress-service
    labels: 
        app: ingress-service-app
spec: 
    type: NodePort
    ports: 
        - port: 80
          targetPort: 80
          protocol: TCP
          name: http
        - port: 443
          targetPort: 443
          protocol: TCP
          name: https
    selector: 
        name: nginx-ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - egress
  egress:
  - to:
    - podSelector:
         matchLabels:
           name: payroll
      ports:
        - protocol: TCP
          port: 8080
  - to:
    - podSelector:
         matchLabels:
           name: mysql
      ports:
        - protocol: TCP
          port: 3306
